[package]
name = "agon-light-emulator"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = "0.35" }
clap = { version = "4.3.1", features = ["derive"] }
log = "0.4"
agon-light-emulator-debugger = { git = "https://github.com/tomm/agon-light-emulator-debugger.git", rev="21c880b1b89364ac8787be1f8fd9da6ab8b8435c"}
agon-cpu-emulator = { git = "https://github.com/tomm/agon-cpu-emulator.git", rev="472ed569a2331ed4b76025bef6c5d6d760d9231f"}
agon-light-vdp = { git = "https://github.com/astralaster/agon-light-vdp.git", rev="78e81bddbcf01df0d1f8fa450ed3261320ca4378"}
